Ashwin | #3336 | Fixing alignment in unique id learn more box.

--- a/datawinners/media/css/scss/section_new_create_project.scss
+++ b/datawinners/media/css/scss/section_new_create_project.scss
@@ -500,13 +500,13 @@ fieldset {
   padding-top:3px;
   margin-top: 6px;
   margin-bottom: 13px;
-  margin-left: 25px;
+  margin-left: 5px;
   border:none !important;
 }
 
 .border{
-  margin-left: 25px;
-  margin-right:25px;
+  margin-left: 5px;
+  margin-right:5px;
   padding: 5px;
 }
 
